--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.8'
 services:
 
-  cuttlink_dev_dsn:
+  cuttlink_db_service:
     image: postgres:15.1-bullseye
-    container_name: cuttlink_db
+    container_name: postgres
+    hostname: postgres
     volumes:
       - /var/lib/postgresql/data/
     environment:
@@ -11,27 +12,19 @@ services:
       POSTGRES_USER: cluser
       POSTGRES_PASSWORD: clpassword
     ports:
-      - 5432:5432
-    networks:
-      - cuttlink_dev_net
+      - "5432:5432/tcp"
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "cluser", "-d", "cldev"]
       interval: 1s
       timeout: 1s
       retries: 42
 
-  cuttlink_dev_migration:
+  cuttlink_migrate_service:
     image: migrate/migrate:latest
-    container_name: cuttlink_migrator
+    container_name: cuttlink_migrate
     volumes:
       - ./cmd/shortener/migrations:/migrations
-    networks:
-      - cuttlink_dev_net
     depends_on:
-      - cuttlink_dev_dsn
-    command: -source=file:///migrations -database postgres://cluser:clpassword@172.26.0.2:5432/cldev?sslmode=disable up
+      - cuttlink_db_service
+    command: -source=file:///migrations -database postgres://cluser:clpassword@postgres:5432/cldev?sslmode=disable up
     restart: on-failure
-
-networks:
-  cuttlink_dev_net:
-    driver: bridge
